[gd_scene load_steps=4 format=3 uid="uid://bhhh6jnqytk4k"]

[ext_resource type="Script" path="res://play_area.gd" id="1_6kc2c"]
[ext_resource type="Script" path="res://game_manager.gd" id="1_h2i2f"]
[ext_resource type="Script" path="res://buttons.gd" id="2_d056d"]

[node name="Control" type="Control"]
custom_minimum_size = Vector2(635, 700)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -324.0
offset_right = 311.0
offset_bottom = 700.0
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="game_manager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_h2i2f")

[node name="game_area" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(635, 700)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -317.5
offset_right = 332.5
offset_bottom = 700.0
grow_horizontal = 2
localize_numeral_system = false
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_bottom = 0

[node name="play_area" type="GridContainer" parent="game_area"]
custom_minimum_size = Vector2(605, 405)
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4
script = ExtResource("1_6kc2c")

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -317.5
offset_top = -170.0
offset_right = 317.5
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0

[node name="buttons" type="GridContainer" parent="CenterContainer2"]
layout_mode = 2
theme_override_constants/h_separation = 30
columns = 3
script = ExtResource("2_d056d")
